--- a/教资-科二.md
+++ b/教资-科二.md
@@ -74,19 +74,19 @@
 
 ---
 
-![image-20230724235542484](C:\Users\duaoyu\AppData\Roaming\Typora\typora-user-images\image-20230724235542484.png)
+![image-20230724235542484](C:\Users\duaoyu\Desktop\述职\教资\笔记图\image-20230724235542484.png)
 
 #### 奴隶社会（国外）
 
 ---
 
-![image-20230725000005686](C:\Users\duaoyu\AppData\Roaming\Typora\typora-user-images\image-20230725000005686.png)
+![image-20230725000005686](C:\Users\duaoyu\Desktop\述职\教资\笔记图\image-20230725000005686.png)
 
 #### 封建社会（中国）
 
 ---
 
-![image-20230725003243919](C:\Users\duaoyu\AppData\Roaming\Typora\typora-user-images\image-20230725003243919.png)
+![image-20230725003243919](C:\Users\duaoyu\Desktop\述职\教资\笔记图\image-20230725003243919.png)
 
 ***隋朝***建立了***科举制度***
 
@@ -102,5 +102,5 @@
 
 ---
 
-![image-20230725003601564](C:\Users\duaoyu\AppData\Roaming\Typora\typora-user-images\image-20230725003601564.png)
+![image-20230725003601564](C:\Users\duaoyu\Desktop\述职\教资\笔记图\image-20230725003601564.png)
 
