--- a/教资-科二.md
+++ b/教资-科二.md
@@ -104,3 +104,134 @@
 
 ![image-20230725003601564](C:\Users\duaoyu\Desktop\述职\教资\笔记图\image-20230725003601564.png)
 
+#### 近现代
+
+![QQ浏览器截图20230725010024](C:\Users\duaoyu\Desktop\述职\教资\笔记图\QQ浏览器截图20230725010024.png)
+
+最早实施义务教育的国家是***德国***
+
+- [x] 20世纪以后的教育新特点
+
+- 教育的终身化，法国的***保罗·朗格朗***最早系统论述了终身教育
+- 教育的全民化
+- 教育的民主化，教育起点的机会均等，教育过程中享受教育资源的机会均等，教育结果的均等
+- 教育的多元化，培养目标、办学形式、管理模式、教育内容、评价标准
+- 教育技术的现代化，科学技术、教育思想、观念现代化、教师队伍的现代化
+
+## 一、教育学的概念
+
+- [x] 教育学是以***教育现象、教育问题***为研究对象，不断探索并揭示***教育规律***的一门社会科学。
+
+教育问题是推动教育学发展的内在动力。
+
+教育学的概念
+
+- 对象：教育现象、教育问题
+- 任务：揭示规律
+
+### 一、教育学的萌芽阶段
+
+#### 1、中国
+
+孔子，《论语》教育思想，孔子是世界上***第一个***提出***启发式教学***的人
+
+- 有教无类
+- 学而优则仕
+- “仁”
+- 学、思、行并重
+- 启发诱导
+- 因材施教
+- 教育内容
+
+- ***《学记》***，***世界上第一部专门谈论教育、教育问题的书***
+
+***中国古代及世界上最早***论述***教育、教学问题***的专门论著，成文于战国末期，孟子弟子乐正克整理所著
+
+教育的思想
+
+- 教育的功能，君子如欲化民俗，其必由学乎；建国君民，教学为先
+- ***豫时孙摩***，***教育的关键期***，教育要***符合人身心发展的规律，循序渐进***
+- ***启发式教学***，道而弗牵，强而弗抑，开而弗达
+- 长善救失
+- ***学不躡等***，与循序渐进的教学原则一致
+- 教学相长
+
+#### 2、西方
+
+##### 古希腊
+
+- 苏格拉底，***西方最早实施启发式教学的人***，问答法（找茬式）
+- 柏拉图，代表作《理想国》，重视早期教育，***寓学习于游戏***
+- 亚里士多德，代表作《政治学》，首次提出***教育遵循自然***，最早提出自由教育
+
+##### 古罗马
+
+昆体良，***西方第一部教育专著，世界上第一部研究教学法的著作***
+
+《论演说家的教育/培养》、《雄辩术原理》
+
+### 二、教育学的独立阶段-独立多样化阶段
+
+##### 培根-提出
+
+- 科学***归纳法***第一人，***首次提出***教育学应作为一门***独立***的学科
+
+- 《论科学的价值与发展》
+
+- 被称为***近代实验科学的鼻祖***
+
+##### 夸美纽斯-实现
+
+- ***《大教学论》***，***教育学独立学科的标志***
+
+- ***教育学之父***
+- ***班级授课制***，首次提出班级-埃拉斯莫斯
+- ***泛智教育***，普及初等教育
+- 直观性教学原则，第一次进行了理论论证
+
+##### 康德-开课
+
+- 最早在大学讲授这门课
+
+##### 赫尔巴特-规范
+
+- ***《普通教育学》***，***规范教育学***的建立
+- ***现代教育学之父***；科学教育学的奠基人；***传统***教育思想的代表
+- 一原则：教育性教育原则，***教育的最高目的是培养道德***--德育
+- 二基础：伦理学+心理学作为教育学的理论基础
+- 三中心：教师中心，课堂中心，教材中心
+- 四阶段：明了（清楚），联想（联合），系统和方法
+
+##### 杜威-改变
+
+- ***《民主主义与教育》***--实用主义哲学创始人，实用主义教育学代表人物
+- 新三中心：儿童（学生）中心，经验中心，活动中心
+- 四个即：教育即生活；教育即生长；教育即经验的改组或改造；学习即社会
+- 五步教学法：困难、问题、假设、验证、结论
+
+##### 陶行知
+
+- 生活即教育，社会即学校，教学做合一
+
+##### 卢梭
+
+- 《爱弥儿》，自然主义教育思想，接受顺其自然的教育，反对人的干预
+- 倡导自然教育和儿童本位的教育观，被认为***最早发现了儿童***
+
+##### 洛克
+
+- ***白板说***，倡导绅士教育
+- 《教育漫画》
+
+##### 裴斯泰洛奇
+
+- ***西方教育史上第一个将教育与生产劳动相结合，这一思想付诸实践的教育家***
+- 慈爱的儿童之父，教育史上小学各科学法奠基人，***最早提出教育心理学化的主张***
+
+##### 斯宾塞
+
+- ***科学知识最有价值***，***最早将课程***作为专门术语提出，学科（知识）中心课程理论代表人物之一，***课程作为教育科学的专门术语见于《什么知识最有价值》***，博比特《课程》专门研究
+- ***《教育论》***，实证主义者，反对形式教育，重视实践教育
+- ***教育预备生活说***，教育的目的就是为完满生活做准备
+
+#### P6
